# end_to_end_ds_project_template_4H23

./: .env  .gitignore  config.py  main.py  ner.py  pyproject.toml
data/raw/: test_set.pkl  train_set.pkl
end_to_end_project/: __init__.py  get_data.py  helpers.py
notebooks/: 1.0_JA_get_data.ipynb
tests/: test_end_to_end_project.py
