[tool.poetry]
name = "end_to_end_project"
version = "0.1.0"
description = ""
authors = ["jillallan <jillallan24@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
numpy = "^1.20.2"
matplotlib = "^3.4.1"
scikit-learn = "^0.24.2"
flake8 = "^3.9.1"
ipykernel = "^5.5.3"
python-dotenv = "^0.17.1"
pandas = "^1.2.4"
nltk = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get_data = "end_to_end_project:get_data_script"
